# koas

./: .gitignore  Cargo.toml  Makefile  README.md  arviointi.asd  arviointi.lisp  koas.asd  koas.lisp  make-image.lisp  make-quickload.lisp  make.lisp  readline.lisp  run.lisp  script-lib.lisp
help/: .dir-locals.el  command-hak.txt  command-hao.txt  command-has.txt  command-ho.txt  command-hr.txt  command-hs.txt  command-lo.txt  command-ls.txt  command-m.txt  command-ma.txt  command-md.txt  command-ms.txt  command-poista.txt  command-qm.txt  command-tj.txt  command-tk.txt  command-tlk.txt  command-tp.txt  command.txt  commands-query.txt  commands.txt  database.txt  quick.txt  settings.txt  usage.txt
src/: commands.rs  config.rs  database.rs  database.txt  error.rs  koas.asd  koas.lisp  lib.rs  main.rs  main_commands.rs  modes.rs  objects.rs  output.rs  pathconv.lisp  pgsql.lisp  prelude.rs  print.rs  settings.txt  string-io.lisp  tietokanta.lisp  tools.rs  yhteinen.lisp
src/cli/: commands.rs  editable.rs  main.rs
src/cli/help/: command-hak.txt  command-has.txt  command-ho.txt  command-hr.txt  command-hs.txt  command-lo.txt  command-m.txt  command-md.txt  command-ms.txt  command-qm.txt  command-tj.txt  command-tk.txt  command-tlk.txt  quick.txt  usage.txt
src/commands/: assignments.rs  deprecated.rs  edit.rs  grades.rs  groups.rs  students.rs
src/database/: assignments.rs  deprecated.rs  grades.rs  groups.rs  init.rs  print.rs  students.rs
src/lib/: commands.rs  database.rs  error.rs  lib.rs  output.rs  prelude.rs  tools.rs
src/lib/commands/: assignments.rs  (+3 more)
(+6 files in other folders)
