[package]
name = "koas"
description = "Kouluarvosanatietokanta"
version = "2.0.0"
edition = "2024"
authors = ["Teemu Likonen <tlikonen@iki.fi>"]
license = "GPL-3.0-or-later"
publish = false

[dependencies]
futures = "0.3.31"
just-getopt = "2.0.0"
libc = "0.2.171"
rustyline = "16.0.0"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "tls-native-tls"] }
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
xdg = "3.0.0"
